--- a/styles/mtm_content_elements.css
+++ b/styles/mtm_content_elements.css
@@ -22,11 +22,11 @@
     margin: 0 auto;
     max-width: 1200px;
     position: relative !important;
-    background-color:#ffffff;
+    background-color:#333;
 }
 
 .mobile-header, .mobile-footer {
-    background-color: #4094d5 !important;
+    background-color: #222 !important;
     color: #ffffff !important;
     font-size: 14px !important;
     text-shadow: none !important;
@@ -195,6 +195,7 @@ body, input, select, textarea, button, .ui-btn, .mobile-detail-page {
     color: #ddd;
     font-weight: normal;
     text-shadow: none;
+    border:0px none !important;
 }
 
 .mobile-content .ui-select div, .mobile-content .ui-select a{
